--- a/css/styles.css
+++ b/css/styles.css
@@ -99,9 +99,13 @@ img {
     font-size: 14px;
     letter-spacing: 0.02em;
     line-height: calc(16/14);
+    position: relative;
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
+    transition: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .pages:hover,
@@ -124,7 +128,18 @@ img {
     color: var(--link-color);
 
 }
-
+.current-page::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    display: block;
+    width: 100%;
+    height: 5px;
+   border-radius: 2px;
+    background-color: var(--accent-color);
+    transform: scaleX(1);
+}
 .header-contact-link {
     color: var(--contact-color);
     font-weight: 500;
@@ -242,8 +257,8 @@ fill: currentColor;
 }
 
 
-.modal-close-icon:hover,
-.modal-close-icon:focus {
+.modal-button:hover,
+.modal-button:focus {
     color: var(--accent-color);
     text-decoration: none;
     cursor: pointer;
@@ -278,8 +293,83 @@ fill: currentColor;
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.2)
+    background-color: rgba(0, 0, 0, 0.2);
 }
+
+.form-title {
+font-family: 'Roboto', sans-serif;
+font-weight: 700;
+font-size: 20px;
+line-height: calc(23.44/20);
+text-align: center;
+margin-top: 40px;
+}
+ form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 40px;
+    margin-right: 39px;
+ }
+ label {
+    display: flex;
+    flex-direction: column;
+    font-family: Roboto, sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: calc(14.06/12);
+    color: #757575;
+ }
+
+ 
+ .data-input {
+    position: relative;
+    height: 40px;
+    margin-left: 40px;
+    margin-top: 4px;
+    margin-right: 40px;
+    border-radius: 4px;
+    overflow: hidden;
+ }
+.data-input > .input-icon {
+position: absolute;
+top: 50%;
+transform: translateY(-50%);
+padding-top: 14px;
+padding-left: 14px;
+}
+
+ textarea {
+    resize: none;
+ }
+ .checkbox {
+    display: block;
+    padding-left: 54px;
+ }
+ .send {
+    width: 200px;
+    height: 50px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: calc(30/16);
+    align-items: center;
+    letter-spacing: 0.06em;
+    color: var(--secondary-title-color);
+    background-color: var(--link-color);
+    cursor: pointer;
+    display: block;
+    margin-bottom: 40px;
+    margin-left: 165px;
+    align-items: center;
+    border-radius: 4px;
+    padding: 10px 20px;
+    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    transition: backdrop;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        }
+ 
 /* FEATURES  */
 .hide {
     position: absolute;
@@ -590,6 +680,54 @@ border-radius: 50%;
 .footer-social-media-item:not(:last-child) {
     margin-right: 10px;
 }
+
+.footer-container-right {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 94px;
+}
+.subscription-text {
+    color: #ffff;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: calc(16.41-14);
+    margin-bottom: 20px;
+}
+.email-subscription {
+    display: flex;
+    width: 358px;
+    height: 50px;
+    border-color: #ffff;
+    background-color: transparent;
+    border: rgba(0, 0, 0, 0.15) 1px;
+    border-radius: 4px;
+   
+}
+.subscribe {
+width: 200px;
+height: 50px;;
+font-weight: 700;
+font-size: 16px;
+line-height: calc(30/16);
+align-items: center;
+letter-spacing: 0.06em;
+color: var(--secondary-title-color);
+background-color: var(--link-color);
+cursor: pointer;
+display: flex;
+margin-top: 20px;
+margin-left: 12px;
+justify-content: space-evenly;
+border-radius: 4px;
+padding: 10px 20px;
+border: none;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+transition: backdrop;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
 /* PORTFOLIO BUTTONS SECTION */
 .portfolio-section {
     padding-top: 94px;
@@ -644,6 +782,7 @@ border-radius: 50%;
     flex-basis: calc(100% / 3 - var(--card-gap));
     margin-left: var(--card-gap);
     margin-top: var(--card-gap);
+    cursor: pointer;
 }
   .portfolio-image {
     display: block;
@@ -672,7 +811,6 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
     font-weight: 400;
     font-size: 18px;
     line-height: calc(28/18);
-    text-align: center;
     position: absolute;
     display: block;
     padding: 63px 24px;
