--- a/css/styles.css
+++ b/css/styles.css
@@ -284,91 +284,116 @@ fill: currentColor;
     transition-duration:  250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.data-modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.2);
+.form-title {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: calc(23.44/20);
+    text-align: center;
+    margin-bottom: 12px;
+    
+}
+.modal-form {
+    padding: 40px;
 }
 
-.form-title {
-font-family: 'Roboto', sans-serif;
-font-weight: 700;
-font-size: 20px;
-line-height: calc(23.44/20);
-text-align: center;
-margin-top: 40px;
+.modal-field-wrapper {
+    margin-bottom: 10px;
+
 }
- form {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-left: 40px;
-    margin-right: 39px;
- }
- label {
-    display: flex;
-    flex-direction: column;
-    font-family: Roboto, sans-serif;
+.form-label {
+    display: block;
     font-weight: 400;
     font-size: 12px;
-    line-height: calc(14.06/12);
-    color: #757575;
- }
-
-
- .data-input {
+    line-height: calc(14/12);
+    letter-spacing: 0.01em;
+    color: var(--secondary-text-color);
+    margin-bottom: 5px;
+}
+.modal-input-wrapper {
+    display: block;
     position: relative;
-    margin-left: 40px;
-    margin-top: 4px;
-    margin-right: 40px;
+}
+.modal-input {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: calc(14/12);
+    letter-spacing: 0.01em;
+    color: rgba (117, 117, 117, 0.5);
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    overflow: hidden;
- }
- .data-input:hover,
- .data-input:focus {
-    color: var(--accent-color);
-     border-color: var(--accent-color);
-     cursor: pointer; 
-    }
-.data-input > .input-icon {
-position: absolute;
-top: 50%;
-transform: translateY(-50%);
-padding-top: 14px;
-padding-left: 14px;
-
+    cursor: pointer;
+    padding: 12px 16px 12px 42px;
+    transition: border-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-input:focus {
+    border-color: #2196F3;
+    color: #2196F3;
+    outline: none;
 }
 
-.input-icon {
-    display: inline-block;
-    width: 11px;
-    height: 11px;
-    fill: currentColor;
+.modal-input-icon {
+    position: absolute;
+    left: 15px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-label > input {
-    padding-left: 35px;
-    height: 35px;
+.modal-input:focus ~ .modal-input-icon {
+    fill: #2196F3;
 }
+
+
  textarea {
     resize: none;
     padding: 12px 16px;
+    width: 100%;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    cursor: pointer;
  }
- .checkbox {
-    display: block;
-    padding-top: 20px;
-    padding-left: 54px;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: calc(24/14);
-    padding-right: 51px;
+ textarea:focus {
+     border-color: #2196F3;
+     color: #2196F3;
+     outline: none;
  }
+ .checkbox-label {
+    display: flex;
+    cursor: pointer;
 
+ }
+ .modal-checkbox {
+    width: 15px;
+    height: 15px;
+    border: 1px solid #212121;
+    border-radius: 2px;
+    margin-right: 8px;
+    margin-top: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+ }
+ 
+ .checkbox {
+    pointer-events: none;
+    opacity: 0%;
+ }
+ */
+ .checkbox:checked + .checkbox-label > .modal-checkbox {
+    background-color: #2196F3;
+    border: none;
+ }
+   .modal-checkmark {
+    opacity: 0%;
+    margin-left: 54px;
+   }
  .send {
     width: 200px;
     height: 50px;
@@ -380,12 +405,11 @@ label > input {
     color: var(--secondary-title-color);
     background-color: var(--link-color);
     cursor: pointer;
-    display: block;
     margin-bottom: 40px;
-    margin-left: 165px;
+    margin-left: 110px;
     align-items: center;
     border-radius: 4px;
-    padding: 10px 20px;
+    padding: 10px 80px;
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     transition: backdrop;
@@ -706,9 +730,38 @@ border-radius: 50%;
 
 .footer-container-right {
     margin-left: auto;
-display: flex;
-    align-items: center;
+
    
+}
+.my-footer-form {
+    display: flex;
+
+}
+
+.my-email-subscription {
+    width: 358px;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    padding: 15px 16px;
+    margin-right: 12px;
+    background-color: transparent;
+}
+
+.my-email-subscription::placeholder {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: calc(20/16);
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+
+}
+.my-email-subscription:hover,
+.my-email-subscription:focus {
+    outline: none;
+    color:#ffff;
+    background-color: transparent;
 }
 .subscription-text {
     color: #ffff;
@@ -730,30 +783,33 @@ display: flex;
  
 
 }
-.subscribe {
+.my-subscribe {
 width: 200px;
 height: 50px;
 font-weight: 700;
 font-size: 16px;
 line-height: calc(30/16);
-align-items: center;
 letter-spacing: 0.06em;
 color: var(--secondary-title-color);
 background-color: var(--link-color);
-cursor: pointer;
 display: flex;
-margin-left: 12px;
-margin-top: 108px;
-justify-content: space-evenly;
-border-radius: 4px;
+align-items: center;
+justify-content: center;
+cursor: pointer;
 padding: 10px 20px;
 border: none;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 transition: backdrop;
 transition-duration: 250ms;
 transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
+.subscribe-icon {
+    margin-left: 30px;
+    margin-top: 13px;
+    margin-right: 8px;
+}
 
 /* PORTFOLIO BUTTONS SECTION */
 .portfolio-section {
