--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,8 @@
     --portfolio-button-color: #F5F4FA;
     --portfolio-button-text: #212121;
     --card-gap: 30px;
-    --backdrop: rgba(0, 0, 0, 0.2)
+    --backdrop: rgba(0, 0, 0, 0.2);
+    --button-transition: rgba(0, 0, 0, 0.2) 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 *::after, ::before {
     box-sizing: inherit;
@@ -208,9 +209,7 @@ fill: currentColor;
     padding: 10px 20px;
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    transition: backdrop;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: var(--button-transition);
 
 
 }
@@ -251,9 +250,7 @@ fill: currentColor;
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: backdrop;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: var(--button-transition);
 }
 
 
@@ -326,9 +323,7 @@ fill: currentColor;
     border-radius: 4px;
     cursor: pointer;
     padding: 12px 16px 12px 42px;
-    transition: border-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-input:focus {
     border-color: #2196F3;
@@ -396,12 +391,7 @@ fill: currentColor;
  }
 
 
- .modal-checkbox:hover,
- .modal-checkbox:focus {
-     color: #ffff;
-     background-color: var(--accent-color);
- }
- 
+
  .checkbox:checked + .checkbox-label > .modal-checkbox {
     background-color: #2196F3;
     border: none;
@@ -414,23 +404,25 @@ fill: currentColor;
     font-weight: 700;
     font-size: 16px;
     line-height: calc(30/16);
-    align-items: center;
     letter-spacing: 0.06em;
     color: var(--secondary-title-color);
     background-color: var(--link-color);
-    cursor: pointer;
-    margin-bottom: 40px;
-    margin-left: 110px;
+    display: block;
     align-items: center;
+    cursor: pointer;
+    margin: 0 auto;
     border-radius: 4px;
     padding: 10px 80px;
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    transition: backdrop;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: var(--button-transition);
         }
  
+.send:hover,
+.send:focus {
+    background-color: darkblue;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+                }
 /* FEATURES  */
 .hide {
     position: absolute;
@@ -492,6 +484,7 @@ fill: currentColor;
 /* DO */
 .do {
     padding-top: 0;
+    padding-bottom: 94px;
 }
 
 .section-title {
@@ -605,7 +598,9 @@ fill: currentColor;
    background-color: var(--accent-color);
 }
 /* REGULAR CUSTOMERS */
-
+.customers {
+    padding: 94px 0;
+}
 .customers-logo-list {
     display: flex;
     justify-content: center;
@@ -747,12 +742,12 @@ border-radius: 50%;
 
    
 }
-.my-footer-form {
+.footer-form {
     display: flex;
 
 }
 
-.my-email-subscription {
+.email-subscription {
     width: 358px;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -763,7 +758,7 @@ border-radius: 50%;
     background-color: transparent;
 }
 
-.my-email-subscription::placeholder {
+.email-subscription::placeholder {
     font-weight: 400;
     font-size: 16px;
     line-height: calc(20/16);
@@ -771,8 +766,8 @@ border-radius: 50%;
     color: rgba(255, 255, 255, 0.6);
 
 }
-.my-email-subscription:hover,
-.my-email-subscription:focus {
+.email-subscription:hover,
+.email-subscription:focus {
     outline: none;
     color:#ffff;
     background-color: transparent;
@@ -785,19 +780,8 @@ border-radius: 50%;
     margin-bottom: 20px;
  
 }
-.email-subscription {
-    width: 358px;
-    height: 50px;
-    border-color: #ffff;
-    background-color: transparent;
-    border: rgba(0, 0, 0, 0.15) 1px;
-    border-radius: 4px;
-   padding-left: 16px;
-  margin-top: 108px;
- 
 
-}
-.my-subscribe {
+.subscribe {
 width: 200px;
 height: 50px;
 font-weight: 700;
@@ -812,13 +796,16 @@ justify-content: center;
 cursor: pointer;
 padding: 10px 20px;
 border: none;
+border-radius: 4px;
+transition: var(--button-transition);
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-transition: backdrop;
-transition-duration: 250ms;
-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
+.subscribe:hover,
+.subscribe:focus {
+    background-color: darkblue;
+}
 .subscribe-icon {
     margin-left: 30px;
     margin-top: 13px;
