--- a/css/styles.css
+++ b/css/styles.css
@@ -104,9 +104,8 @@ img {
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
-    transition: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
 }
 
 .pages:hover,
@@ -156,6 +155,7 @@ img {
 .header-contact-link:hover,
 .header-contact-link:focus {
     color: var(--link-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     font-weight: 500;
 }
 .link-icon {
@@ -209,14 +209,14 @@ fill: currentColor;
     padding: 10px 20px;
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    transition: var(--button-transition);
-
+    
 
 }
 
 .hero-button:hover,
 .hero-button:focus {
     background-color: darkblue;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* MODAL WINDOW */
 
@@ -336,9 +336,7 @@ fill: currentColor;
     left: 15px;
     top: 50%;
     transform: translateY(-50%);
-    transition: fill;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-input:focus ~ .modal-input-icon {
     fill: #2196F3;
@@ -415,12 +413,13 @@ fill: currentColor;
     padding: 10px 80px;
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    transition: var(--button-transition);
+    
         }
  
 .send:hover,
 .send:focus {
     background-color: darkblue;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
                 }
 /* FEATURES  */
@@ -595,7 +594,9 @@ fill: currentColor;
 .social-media-link:hover,
 .social-media-link:focus {
     color: #ffff;
-   background-color: var(--accent-color);
+    background-color: var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* REGULAR CUSTOMERS */
 .customers {
@@ -625,6 +626,7 @@ justify-content: center;
 .customer-logo-link:hover,
 .customer-logo-link:focus {
     color: var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .logo-icon {
@@ -726,7 +728,9 @@ border-radius: 50%;
 .footer-social-media-link:hover,
 .footer-social-media-link:focus { 
     color:#ffff;
-     background-color: var(--accent-color);
+    background-color: var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
 .footer-social-media-icon {
@@ -771,6 +775,7 @@ border-radius: 50%;
     outline: none;
     color:#ffff;
     background-color: transparent;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .subscription-text {
     color: #ffff;
@@ -805,6 +810,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 .subscribe:hover,
 .subscribe:focus {
     background-color: darkblue;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .subscribe-icon {
     margin-left: 30px;
@@ -850,6 +856,8 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 .portfolio-filter:focus {
     color: var(--secondary-title-color);
     background-color: var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
